--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,8 +15,8 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{url_for('static', filename='images/favicon.ico')}}" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
-  <link rel="stylesheet" type="text/css" href="css/player.css">
+  <link href="{{url_for('static', filename='images/webclip.png')}}" rel="apple-touch-icon">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/player.css')}}">
 
 </head>
 <body class="body" onload="update_time()">
@@ -33,26 +33,26 @@
     <div class="div-block-3">
       <div class="div-block-2">
         <div>
-          <div id="icon-box" class="icon-box"><img src="images/OPark.svg" width="162" alt=""></div>
+          <div id="icon-box" class="icon-box"><img src="{{url_for('static', filename='images/OPark.svg')}}images/" width="162" alt=""></div>
         </div>
         <h1 id="username" class="heading-2">Hi Kate,</h1>
         <h1 id="greeting" class="heading content-small">Welcome to<br><strong>Olympic Park</strong></h1>
-      </div><img src="images/Olympic-Park-1.png" srcset="images/Olympic-Park-1-p-500.png 500w, images/Olympic-Park-1-p-800.png 800w, images/Olympic-Park-1-p-1080.png 1080w, images/Olympic-Park-1.png 1500w" sizes="(max-width: 1500px) 100vw, 1500px" alt="" class="image"></div>
+      </div><img src="{{url_for('static', filename='images/Olympic-Park-1.png')}}" srcset="images/Olympic-Park-1-p-500.png 500w, images/Olympic-Park-1-p-800.png 800w, images/Olympic-Park-1-p-1080.png 1080w, images/Olympic-Park-1.png 1500w" sizes="(max-width: 1500px) 100vw, 1500px" alt="" class="image"></div>
     <div class="div-block-6">
       <div class="div-block-7">
         <h1 class="heading-3" style="font-size:15px">Homage To The Athletes</h1>
         <div class="div-block-9">
           <a href="#" class="player_button">
-            <img id="exit_button" src="images/Exit.svg">
+            <img id="exit_button" src="{{url_for('static', filename='images/Exit.svg')}}">
           </a>
           <a href="#" onclick="toggle_pause()" class="player_button">
-            <img id="pause_button" src="images/Pause.svg">
+            <img id="pause_button" src="{{url_for('static', filename='images/Pause.svg')}}">
           </a>
           <a href="#" class="player_button">
-            <img id="skip_button" src="images/Skip.svg">
+            <img id="skip_button" src="{{url_for('static', filename='images/Skip.svg')}}">
           </a>
         </div>
-        <div class="div-block-10"><img src="images/Volume.svg" alt="" class="image-2">
+        <div class="div-block-10"><img src="{{url_for('static', filename='images/Volume.svg')}}" alt="" class="image-2">
           <div class="div-block-11">
             <input type="range" min="0" max="100" value="50" class="slider" id="volumeControl">
           </div>
@@ -60,9 +60,9 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <script src="js/visual-controls.js"></script>
+  <script src="{{url_for('static', filename='https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js')}}" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="{{url_for('static', filename='js/webflow.js')}}" type="text/javascript"></script>
+  <script src="{{url_for('static', filename='js/visual-controls.js')}}"></script>
 
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
