--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,7 +37,7 @@
         </div>
         <h1 id="username" class="heading-2">Hi Kate,</h1>
         <h1 id="greeting" class="heading content-small">Welcome to<br><strong>Olympic Park</strong></h1>
-      </div><img src="{{url_for('static', filename='images/Olympic-Park-1.png')}}" srcset="{{url_for('static', filename='images/Olympic-Park-1-p-500.png')}} 500w, {{url_for('static', filename='images/Olympic-Park-1-p-800.png')}} 800w, {{url_for('static', filename='images/Olympic-Park-1-p-1080.png')}} 1080w, {{url_for('static', filename='images/Olympic-Park-1.png 1500w')}}" sizes="(max-width: 1500px) 100vw, 1500px" alt="" class="image"></div>
+      </div><img src="{{url_for('static', filename='images/Olympic-Park-1.png')}}" srcset="{{url_for('static', filename='images/Olympic-Park-1-p-500.png')}} 500w, {{url_for('static', filename='images/Olympic-Park-1-p-800.png')}} 800w, {{url_for('static', filename='images/Olympic-Park-1-p-1080.png')}} 1080w, {{url_for('static', filename='images/Olympic-Park-1.png')}} 1500w" sizes="(max-width: 1500px) 100vw, 1500px" alt="" class="image"></div>
     <div class="div-block-6">
       <div class="div-block-7">
         <h1 class="heading-3" style="font-size:15px">Homage To The Athletes</h1>
