--- a/src/templates/mont-royal.html
+++ b/src/templates/mont-royal.html
@@ -8,15 +8,15 @@
   <meta content="Mont Royal" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="Webflow" name="generator">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/conuhacks.webflow.css" rel="stylesheet" type="text/css">
+  <link href="{{url_for('static', filename ='css/normalize.css')}" rel="stylesheet" type="text/css">
+  <link href="{{url_for('static', filename ='css/webflow.css')}" rel="stylesheet" type="text/css">
+  <link href="{{url_for('static', filename ='css/conuhacks.webflow.css')}" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="{{url_for('static', filename='images/favicon.ic')}}o" rel="shortcut icon" type="image/x-icon">
+  <link href="{{url_for('static', filename='images/webclip.png')}}" rel="apple-touch-icon">
 </head>
 <body class="body">
   <div class="section">
@@ -32,23 +32,23 @@
     <div class="div-block-3">
       <div class="div-block-2">
         <div>
-          <div class="icon-box"><img src="images/Mountain.svg" width="162" alt=""></div>
+          <div class="icon-box"><img src="{{url_for('static', filename='images/Mountain.svg')}}" width="162" alt=""></div>
         </div>
         <h1 class="heading-2">Hi Kate,</h1>
         <h1 class="heading content-small">Welcome to<br><strong>Mont Royal</strong></h1>
-      </div><img src="images/Mont-Royal-1.png" srcset="images/Mont-Royal-1-p-500.png 500w, images/Mont-Royal-1-p-800.png 800w, images/Mont-Royal-1-p-1080.png 1080w, images/Mont-Royal-1.png 1500w" sizes="(max-width: 1500px) 100vw, 1500px" alt="" class="image"></div>
+      </div><img src="{{url_for('static', filename='images/Mont-Royal-1.png')}}" srcset="{{url_for('static', filename='images/images/Mont-Royal-1-p-500.png')}} 500w, {{url_for('static', filename='images/Mont-Royal-1-p-800.png')}} 800w, {{url_for('static', filename='images/Mont-Royal-1-p-1080.png')}} 1080w, {{url_for('static', filename='images/Mont-Royal-1.png')}} 1500w" sizes="(max-width: 1500px) 100vw, 1500px" alt="" class="image"></div>
     <div class="div-block-6">
       <div class="div-block-7">
         <h1 class="heading-3">‘Homage To The Athletes&#x27; Rock Movement</h1>
-        <div class="div-block-9"><img src="images/Exit.svg" alt="" class="image-3"><img src="images/Pause.svg" alt="" class="image-4"><img src="images/Skip.svg" alt="" class="image-3"></div>
-        <div class="div-block-10"><img src="images/Volume.svg" alt="" class="image-2">
-          <div class="div-block-11"><img src="images/Volume-Sizer.svg" alt=""></div>
+        <div class="div-block-9"><img src="{{url_for('static', filename='images/Exit.svg')}}" alt="" class="image-3"><img src="{{url_for('static', filename='images/Pause.svg')}}" alt="" class="image-4"><img src="{{url_for('static', filename='images/Skip.svg')}}" alt="" class="image-3"></div>
+        <div class="div-block-10"><img src="{{url_for('static', filename='images/images/Volume.svg')}}" alt="" class="image-2">
+          <div class="div-block-11"><img src="{{url_for('static', filename='images/Volume-Sizer.svg')}}" alt=""></div>
         </div>
       </div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="{{url_for('static', filename='js/webflow.js')}}" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
