added ajax for geolocation

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -62,7 +62,7 @@
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/player.css')}}">
 
 </head>
-<body class="body" onload="update_time()">
+<body class="body" onload="update()">
   <div class="section">
     <div class="container-2 w-container">
       <div class="div--top">
