--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,7 +21,7 @@
               $.ajax({
                 type:"POST",
                 // url:"/unpause"
-                url: "/play?name=" + "Homage_To_The_Athletes_Opening_Ceremony_Soundtrack.wav"
+                url: "/play?name=" + "5.wav"
               })
           }
       }
