fix naming of song

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,7 +21,7 @@
               $.ajax({
                 type:"POST",
                 // url:"/unpause"
-                url: "/play?name=" + "5.wav"
+                url: "/play?name=" + "5.mp3"
               })
           }
       }
